[package]
description = "Conflux execution helper"
homepage = "https://www.confluxnetwork.org"
license = "GPL-3.0"
name = "cfx-execute-helper"
version = "2.0.2"
edition = "2018"

[dependencies]
cfx-bytes = { path = "../../cfx_bytes" }
cfx-internal-common = { path = "../internal_common" }
cfx-parameters = { path = "../parameters" }
cfx-statedb = { path = "../statedb" }
cfx-vm-tracer-derive = { path="../../util/cfx-vm-tracer-derive" }
cfx-types = { path = "../../cfx_types" }
cfx-vm-types = { path = "../vm-types" }
cfx-executor = { path = "../executor" }
error-chain = { version = "0.12", default-features = false }
log = "0.4"
malloc_size_of = {path = "../../util/malloc_size_of"}
malloc_size_of_derive = {path = "../../util/malloc_size_of_derive"}
primitives = { path = "../../primitives" }
rlp = "0.4.0"
rlp_derive = { git = "https://github.com/Conflux-Chain/conflux-parity-deps.git", rev = "1597a9cab02343eb2322ca0ac58d39b64e3f42d1"  }
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
solidity-abi = { path="../../util/solidity-abi" }
strum_macros = "0.20"
pow-types = {path = "../src/pos/types/pow-types"}
typemap = "0.3"