[package]
name = "cfx-rpc-cfx-impl"
version = "0.1.0"
edition = "2021"
license-file.workspace = true

[dependencies]
cfx-execute-helper = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpsee = { workspace = true }
log = { workspace = true }
cfx-types = { workspace = true }
cfx-addr = { workspace = true }
cfxcore = { workspace = true }
primitives = { workspace = true }
cfx-rpc-cfx-types = { workspace = true }
cfx-rpc-cfx-api = { workspace = true }
cfx-rpc-eth-types = { workspace = true }
cfx-rpc-utils = { workspace = true }
cfx-util-macros = { workspace = true }
cfx-parity-trace-types = { workspace = true }
cfx-rpc-common-impl = { workspace = true }
cfxcore-errors = { workspace = true }
cfx-parameters = { workspace = true }
diem-types = { workspace = true }
diem-crypto = { workspace = true }
consensus-types = { workspace = true }
storage-interface = { workspace = true }
itertools = { workspace = true }
cfx-executor = { workspace = true }
cfx-statedb = { workspace = true }